@@ -3,7 +3,8 @@ version 2.1-alpha XX-Ago-2012
 . [NEW] Javascript bindings for cocos2d, CocosDenshion and Chipmunk.
 			Includes Javascript remote console
 . [NEW] Node: Added RotationalSkew featur (compatible with Flash)
-. [NEW[ Tests: Tests for RotationalSkew feature
+. [NEW] Tests: Tests for RotationalSkew feature
+. [FIX] LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
 
 version 2.0.0 8-Jul-2012
 . [FIX] EventDispatcher: fixed ccMouseEnter/Exit
